--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "ShoppingBot",
 	"version": "0.0.1",
 	"dependencies": {
-		"express":"~4.9"},
+		"express":"~4.9",
+		"body-parser"},
 	"engines": {
 		"node": "0.8.x",
 		"npm": "1.1.x"
