--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"express":"^4.13.4",
-		"body-parser":"^1.15.0}",
+		"body-parser":"1.8.1}",
 		"request":"^2.72.0"
 	},
 	"engines": {
