--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"express":"^4.13.4",
-		"request":"^2.72.0"
+		"request":"^2.72.0",
+		"body-parser":"1"
 	},
 	"engines": {
 		"node": "^5.9.1"
